--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Home | Technoecho</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -61,35 +62,11 @@
 	
 
 		<!-- corousel starts here -->
-			<div class="container-fluid" style="margin-bottom: 2%;">
-		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  	<ol class="carousel-indicators">
-    	<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="..." alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="..." alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="..." alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+			<div class="container-fluid parallax" style="margin-bottom: 2%;">shgoduh
+				
+			</div><div class="container-one container">jgfujff </div>
 		<!-- corousel ends here -->
-	</div>
+	
 
 	<!-- second container starts here -->
 		<div class="container-fluid">
@@ -228,20 +205,20 @@
 		<div class="container-fluid col-md-12 row">
 			
 			<div class="container col-md-5">
-  		<iframe width="500" height="215" src="https://www.youtube.com/embed/uYrDrMEGu58?&autoplay=1&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  		<iframe width="500" height="215" src="https://www.youtube.com/embed/uYrDrMEGu58?&autoplay=0&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
 		<div class="embed-responsive col-md-5">
-  		<iframe width="500" height="215" src="https://www.youtube.com/embed/uYrDrMEGu58?&autoplay=1&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  		<iframe width="500" height="215" src="https://www.youtube.com/embed/uYrDrMEGu58?&autoplay=0&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
 </div>
 
 <div class="container-fluid col-md-12 row">
 			
 			<div class="container col-md-5">
-  		<iframe width="500" height="215" src="https://www.youtube.com/embed/uYrDrMEGu58?&autoplay=1&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  		<iframe width="500" height="215" src="https://www.youtube.com/embed/uYrDrMEGu58?&autoplay=0&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
 		<div class="embed-responsive col-md-5">
-  		<iframe width="500" height="215" src="https://www.youtube.com/embed/uYrDrMEGu58?&autoplay=1&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  		<iframe width="500" height="215" src="https://www.youtube.com/embed/uYrDrMEGu58?&autoplay=0&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
 </div>
 	</div>
@@ -268,9 +245,12 @@
 		<div class="col-md-4">skfhbgsfbhg</div>
 		<div class="col-md-4">skfhbgsfbhg</div>
 		<div class="col-md-4">skfhbgsfbhg</div>
-		
-		<p><> with love in IN</p>
 	</div>
+		<!-- baseline -->
+		<div class="container-fluid baseline col-md-12 row">
+			<span class="baseline-text col-md-4"><p>&copy;Technoecho.in  &nbsp; &nbsp;   | &nbsp; &nbsp; <> &nbsp; with &nbsp; <span style="color:red;scale: 2;">&hearts; </span> &nbsp; in &nbsp; <span style="color: blue;">IN</span></p></span>
+		</div>
+	
 	<!-- footer ends here -->
 </body>
 </html>
