--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 	
 
 		<!-- corousel starts here -->
-			<div class="container-fluid parallax" style="margin-bottom: 2%;">shgoduh
+			<div class="container-fluid parallax" style="margin-bottom: 2%;"></div>
 				
-			</div><div class="container-one container">jgfujff </div>
+			
 		<!-- corousel ends here -->
 	
 
